fix(ai): use full subject code strings for candidate pool queries
The selectCandidates mapper requires exact subject-code match (e.g.
"101,204,302,408"), but AiCandidatePoolServiceImpl was passing bare
"408" which never matched multi-subject programs. Now queries both
408 exam combos and merges with dedup.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>